added website links for the references

--- a/sitereport.html
+++ b/sitereport.html
@@ -128,21 +128,24 @@
        <div class="reference">
          <h1>Reference</h1>
          <h4>Font</h4>
-         <p>The fonts that I used in my website were google fonts which I got from: https://fonts.google.com/</p>
+         <p>This Roboto font was used as the main font in my website (n.d)  [Online]. Available at: <a href="https://fonts.google.com/">https://fonts.google.com/</a> [Accessed 9 November 2020]</p>
+         <p>This Fredoka font was used to create menu exit button (n.d)  [Online]. Available at: <a href="https://fonts.google.com/">https://fonts.google.com/</a> [Accessed 10 November 2020]</p>
+         <p>This Nerko font was used only one on the home page (n.d)  [Online]. Available at: <a href="https://fonts.google.com/">https://fonts.google.com/</a> [Accessed 1 December 2020]</p>
+         
          <h4>Background Image</h4>
-         <p><i>The image is used for the entire website background</i> (n.d) [Online]. Available at: Cool Black Background Designs ·① WallpaperTag [Accessed 12 November 2020]</p>
+         <p><i>The image is used for the entire website background</i> (n.d) [Online]. Available at: <a href="https://wallpapertag.com/cool-black-background-designs">https://wallpapertag.com/cool-black-background-designs</a> [Accessed 12 November 2020]</p>
          <h4>Software Engineering 1</h4>
-         <p><i>The image is used to represent the software engineering module in the portfolio page</i> (2016) [Online]. Available at Bezmaksas datorprogrammas | CSS Group [Accessed 12 November 2020].</p>
+         <p><i>The image is used to represent the software engineering module in the portfolio page</i> (2016) [Online]. Available at: <a href="https://www.cssgroup.lv/bezmaksas-datorprogrammas/">https://www.cssgroup.lv/bezmaksas-datorprogrammas/</a> [Accessed 12 November 2020].</p>
          <h4>Computer Communications</h4>
-         <p><i>image is used to represent the Computer Communications module in the portfolio page</i> (n.d) [Online]. Available at: Download this awesome wallpaper - Wallpaper Cave [Accessed 12 November 2020].</p>
+         <p><i>image is used to represent the Computer Communications module in the portfolio page</i> (n.d) [Online]. Available at: <a href="https://wallpapercave.com/w/hkcLJjG">https://wallpapercave.com/w/hkcLJjG</a> [Accessed 12 November 2020].</p>
          <h4>Databases 1</h4>
-         <p><i>The image is used to represent the Databases 1 module in the portfolio page</i> (n.d) [Online]. Available at: Download this awesome wallpaper - Wallpaper Cave [Accessed 14 November 2020].</p>
+         <p><i>The image is used to represent the Databases 1 module in the portfolio page</i> (n.d) [Online]. Available at: <a href="https://wallpapercave.com/w/wp2347550">https://wallpapercave.com/w/wp2347550</a> [Accessed 14 November 2020].</p>
          <h4>Web Development</h4>
-         <p><i>image is used to represent the Web Development module in the portfolio</i> page (n.d) [Online]. Available at: monitor showing Java programming photo – Free Code Image on Unsplash [Accessed 15 November 2020].</p>
+         <p><i>image is used to represent the Web Development module in the portfolio</i> page (n.d) [Online]. Available at: <a href="https://unsplash.com/photos/OqtafYT5kTw">https://unsplash.com/photos/OqtafYT5kTw</a> [Accessed 15 November 2020].</p>
          <h4>Problem Solving & Programming</h4>
-         <p><i>image is used to represent the Problem Solving and Programming module in the portfolio page</i> (n.d) [Online]. Available at: Free download Java Code Wallpapers Java Code Myspace Backgrounds Java Code [1280x1024] for your Desktop, Mobile & Tablet | Explore 47+ Java Programming Wallpaper | Java Programming Wallpaper, Java Wallpaper, Programming Wallpaper (wallpapersafari.com) [Accessed 15 November 2020].</p>
+         <p><i>image is used to represent the Problem Solving and Programming module in the portfolio page</i> (n.d) [Online]. Available at: <a href="https://wallpapersafari.com/w/d3OYCe">https://wallpapersafari.com/w/d3OYCe</a> [Accessed 15 November 2020].</p>
          <h4>Computer Systems</h4>
-         <p><i>image is used to represent the Computer systems module in the portfolio page</i> (n.d) [Online].  Available at: Binary Code Wallpaper (60+ images) (getwallpapers.com) [Accessed 17 November 2020].</p>
+         <p><i>image is used to represent the Computer systems module in the portfolio page</i> (n.d) [Online].  Available at: <a href="http://getwallpapers.com/collection/binary-code-wallpaper">http://getwallpapers.com/collection/binary-code-wallpaper</a> [Accessed 17 November 2020].</p>
        </div>
        
      </main>
