adding full details of site report validation

--- a/sitereport.html
+++ b/sitereport.html
@@ -123,7 +123,15 @@
            <img src="cpdesktopcss.jpg" alt="">
            <img src="cpmobilecss.jpg" alt="">
          </div>
+
+         <h3>Site Report page</h3>
+         <div class="sitereportpagevalidation">
+           <img src="srphtml.jpg" alt="">
+           <img src="srpdesktopcss.jpg" alt="">
+           <img src="srpmobilecss.jpg" alt="">
+         </div>
        </div>
+       
        <div class="reference">
          <h1>Reference</h1>
          <h4>Font</h4>
