Re-ordered the navigation menu

--- a/cv.html
+++ b/cv.html
@@ -23,28 +23,28 @@
      </header>    
        
      <nav id="burger">
-         <a href="#close" class="close">X</a>
-         <ul>
-           <li class="home">
-             <a href="index.html">Home</a>
-           </li>
-           <li class="portfolio">
-             <a href="portfolio.html">Portfolio</a>
-           </li>
+      <a href="#close" class="close">X</a>
+      <ul>
+        <li class="home">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="portfolio">
+          <a href="portfolio.html">Portfolio</a>
+        </li>
 
-           <li class="cv">
-             <a href="cv.html">CV</a>
-           </li>
+        <li class="contact">
+          <a href="contact.html">Contact Me</a>
+        </li>
 
-           <li class="sitereport">
-             <a href="sitereport.html">Site Report</a>
-           </li>
+        <li class="CV">
+          <a href="cv.html">CV</a>
+        </li>
 
-           <li class="contact">
-             <a href="contact.html">Contact Me</a>
-           </li>
-         </ul>
-     </nav>
+        <li class="sitereport">
+          <a href="sitereport.html">Site Report</a>
+        </li>
+      </ul>
+  </nav>
 
      <main>
        <div class="cvleft">
