--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
              <a href="portfolio.html">Portfolio</a>
            </li>
 
-           <li class="cv">
+           <li class="contact">
+             <a href="contact.html">Contact Me</a>
+           </li>
+
+           <li class="CV">
              <a href="cv.html">CV</a>
            </li>
 
            <li class="sitereport">
              <a href="sitereport.html">Site Report</a>
-           </li>
-
-           <li class="contact">
-             <a href="contact.html">Contact Me</a>
            </li>
          </ul>
      </nav>
