changed background image link and link colour

--- a/sitereport.html
+++ b/sitereport.html
@@ -140,7 +140,7 @@
          <p><i>Nerko font was used only once on the home page</i> (n.d)  [Online]. Available at: <a href="https://fonts.google.com/">https://fonts.google.com/</a> [Accessed 1 December 2020]</p>
          
          <h4>Background Image</h4>
-         <p><i>The image is used for the entire website background</i> (n.d) [Online]. Available at: <a href="https://wallpapertag.com/cool-black-background-designs">https://wallpapertag.com/cool-black-background-designs</a> [Accessed 12 November 2020]</p>
+         <p><i>The image is used for the entire website background</i> (n.d) [Online]. Available at: <a href="https://cutewallpaper.org/21/best-website-background/view-page-21.html">https://cutewallpaper.org/21/best-website-background/view-page-21.html</a> [Accessed 12 November 2020]</p>
          <h4>Software Engineering 1</h4>
          <p><i>The image is used to represent the software engineering module in the portfolio page</i> (2016) [Online]. Available at: <a href="https://www.cssgroup.lv/bezmaksas-datorprogrammas/">https://www.cssgroup.lv/bezmaksas-datorprogrammas/</a> [Accessed 12 November 2020].</p>
          <h4>Computer Communications</h4>
