added another 'relevant change' in report page

--- a/sitereport.html
+++ b/sitereport.html
@@ -89,6 +89,14 @@
          <div class="indexss2">
           <img src="indexss2.jpg" alt="">
          </div>
+
+         <p>On the <b>15th of December 2020</b> I made another relevant change to my website. The first image below is a screenshot showing how the reference section of the sitereport page looked previously with the website links in the default blue colour. However, I felt like the colour of the links did not work well with the website background as i was unable to see the links properly. In the second screenshot below I decided to change the colour of the links to yellow because the colour stood out, was more visible and worked well with the website background unlike the previous blue colour.</p>
+         <div class="indexss1">
+          <img src="referencess1.jpg" alt="">
+         </div>
+         <div class="indexss2">
+          <img src="referencess2.jpg" alt="">
+         </div>
        </div>
        
        <div class="validationcentre">
